_menu: fix for our align_to

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,6 +1,16 @@
 .pwt-submenu {
-    position: absolute;
     z-index: $zindex-dropdown;
+
+    background: map-get($pwt-color, "neutral");
+    border-radius: 0.2rem;
+    box-shadow: $pwt-dropdown-shadow;
+    max-height: 100vh;
+    max-width: 100vw;
+
+    .pwt-menu {
+	overflow: hidden;
+	max-height: none;
+    }
 }
 
 // MenuBar
@@ -48,13 +58,6 @@ ul.pwt-menubar {
 
 // Menu
 ul.pwt-menu {
-    background: map-get($pwt-color, "neutral");
-    border-radius: 0.2rem;
-    box-shadow: $pwt-dropdown-shadow;
-    overflow: auto;
-    max-height: 100vh;
-    max-width: 100vw;
-
     & > li {
 	position: relative;
 	outline: 0;
